# thinky_games

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  env.prod.example  justfile
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_daily_puzzles.py  003_localized_daily_puzzles.py  004_dictionary_words.py
backend/app/: __init__.py  dependencies.py  main.py
backend/app/config/: env.py
backend/app/core/: __init__.py  auth.py  dictionary_client.py  dictionary_service_proxy.py
backend/app/core/crud/: dictionary.py  puzzles.py  rankings.py  scores.py  users.py
backend/app/core/database/: backup.py  database.py  models.py  seed.py
backend/app/core/games/: __init__.py  base.py  crossclimb.py  crossword.py  daily.py  localized_words.py  patches.py  pinpoint.py  prng.py  queens.py  rae.py  registry.py  sudoku.py  (+6 more)
backend/app/routers/: auth.py  backup.py  dictionary.py  games.py  health.py  scores.py
backend/scripts/: build_wiktionary_dict.py  regenerate_daily_puzzles.py
backend/tests/: conftest.py  test_auth.py  test_games.py  test_ranking_service.py  test_scores.py
dictionary-service/: .env.example  Dockerfile  README.md  pyproject.toml
dictionary-service/app/: main.py
dictionary-service/app/routers/: __init__.py  words.py
dictionary-service/scripts/: build_seed_from_wiktionary.py  build_spanish_word_dataset.py  import_seed.py  seed_dictionary.py  wiktionary_client.py
dictionary-service/tests/: test_words.py
(+227 files in other folders)
