[project]
name = "thinky-games-backend"
version = "1.0.0"
description = "Thinky Games backend API (FastAPI)"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "alembic==1.14.1",
    "pymysql==1.1.1",
    "cryptography==44.0.1",
    "pydantic[email]==2.10.3",
    "pydantic-settings==2.6.1",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.12",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
]

[tool.uv]
# This is a deployable application, not an installable library.
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
