[project]
name = "dictionary-service"
version = "1.0.0"
description = "Independent dictionary API for word games (es/en/de)."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "psycopg2-binary==2.9.10",
    "alembic==1.14.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "httpx==0.28.1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
